Ignore *.bundle and makefile.machine.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.rbc
 *.o
 *.so
+*.bundle
 *.bak
 mkmf.log
 .bundle
@@ -21,3 +22,4 @@ XTAGS
 ext/seven_zip_ruby/Makefile
 ext/seven_zip_ruby/*.def
 ext/seven_zip_ruby/*.pdb
+ext/p7zip/makefile.machine
