--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: ruby
 rvm:
   - "2.0.0"
   - "rbx-2.2.1"
+  - "rbx-2.1.1"
 matrix:
   allow_failures:
     - rvm: "rbx-2.2.1"
+    - rvm: "rbx-2.1.1"
 cache:
   - apt
 before_install:
