--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: ruby
 rvm:
   - "2.0.0"
+  - "2.1.0-preview2"
   - "rbx-2.2.1"
-  - "rbx-2.1.1"
 matrix:
   allow_failures:
+    - rvm: "2.1.0-preview2"
     - rvm: "rbx-2.2.1"
-    - rvm: "rbx-2.1.1"
 cache:
   - apt
 before_install:
