--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ rvm:
   - "2.0.0"
   - "2.1.0-preview2"
   - "rbx-2.2.1"
+  - "ruby-head"
 matrix:
   allow_failures:
     - rvm: "2.1.0-preview2"
+    - rvm: "ruby-head"
 cache:
   - apt
 before_install:
