Use rbx-2 instead of rbx.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: ruby
 rvm:
   - "2.0.0"
   - "2.1.1"
-  - "rbx"
+  - "rbx-2"
   - "ruby-head"
 matrix:
   allow_failures:
-    - rvm: "rbx"
+    - rvm: "rbx-2"
     - rvm: "ruby-head"
 notifications:
   email: false
