--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ matrix:
   allow_failures:
     - rvm: "rbx-2.2.7"
     - rvm: "ruby-head"
+  include:
+    - rvm: 2.3.1
+      os: osx
+      osx_image: xcode7.3
 notifications:
   email: false
 cache:
@@ -17,6 +21,14 @@ cache:
 before_install:
   - gem update bundler
   - bundle install --path=vendor/bundle
-  - sudo apt-get install p7zip-full
+  - case $TRAVIS_OS_NAME in
+      linux)
+        sudo apt-get install p7zip-full
+        ;;
+      osx)
+        brew update && brew tap wk8/p7zip9.20 && brew install p7zip920
+        ;;
+    esac
+
 install: bundle exec rake build_local
 script: bundle exec rspec spec/seven_zip_ruby_spec.rb
