--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - "2.2"
   - "2.3.0"
   - "2.3"
+  - "2.4.1"
   - "rbx-2.2.7"
   - "ruby-head"
 matrix:
@@ -13,6 +14,9 @@ matrix:
     - rvm: "ruby-head"
   include:
     - rvm: 2.3.1
+      os: osx
+      osx_image: xcode7.3
+    - rvm: 2.4.1
       os: osx
       osx_image: xcode7.3
 notifications:
