--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,7 @@ jobs:
       if: ${{ matrix.os == 'ubuntu' }}
     - run: brew update && brew tap wk8/p7zip9.20 && brew install p7zip920
       if: ${{ matrix.os == 'macos' }}
-    - run: |
-        gem update bundler
-        bundle install
-        bundle exec rake build_local
-        bundle exec rspec spec/seven_zip_ruby_spec.rb
-      shell: ${{ (matrix.os == 'windows' && 'cmd') || 'bash' }}
+    - run: gem update bundler
+    - run: bundle install
+    - run: bundle exec rake build_local
+    - run: bundle exec rspec spec/seven_zip_ruby_spec.rb
