--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-    - run: apt install p7zip-full
+    - run: sudo apt-get install p7zip-full
       if: ${{ matrix.os == 'ubuntu' }}
     - run: brew update && brew tap wk8/p7zip9.20 && brew install p7zip920
       if: ${{ matrix.os == 'macos' }}
