--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-    - run: sudo apt-get install p7zip-full
-      if: ${{ matrix.os == 'ubuntu' }}
-    - run: brew update && brew tap wk8/p7zip9.20 && brew install p7zip920
-      if: ${{ matrix.os == 'macos' }}
+    # - run: sudo apt-get install p7zip-full
+    #   if: ${{ matrix.os == 'ubuntu' }}
+    # - run: brew update && brew tap wk8/p7zip9.20 && brew install p7zip920
+    #   if: ${{ matrix.os == 'macos' }}
     - run: gem update bundler
     - run: bundle install
     - run: bundle exec rake build_local
