--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
       matrix:
         os: [ubuntu, macos, windows]
         # It seems that Ruby 2.4 or this gem has a bug related to this gem.
-        ruby: [2.1, 2.2, 2.3, 2.5, 2.6, 2.7, head]
+        ruby: ['2.1', '2.2', '2.3', '2.5', '2.6', '2.7', '3.0', '3.1', head]
     runs-on: ${{ matrix.os }}-latest
-    continue-on-error: ${{ endsWith(matrix.ruby, 'head') || matrix.os == 'macos' || matrix.ruby == 'debug' }}
+    continue-on-error: ${{ endsWith(matrix.ruby, 'head') || matrix.ruby == 'debug' }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
@@ -28,4 +28,4 @@ jobs:
     - run: gem update bundler
     - run: bundle install
     - run: bundle exec rake build_local
-    - run: bundle exec rspec spec/seven_zip_ruby_spec.rb
+    - run: bundle exec rake spec
