--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
     tags: [ 'v*' ]
   pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.job }}-${{ github.head_ref || github.ref_name }}'
@@ -17,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu, macos, windows]
         # It seems that Ruby 2.4 or this gem has a bug related to this gem.
-        ruby: ['2.5', '2.6', '2.7', '3.0', '3.1', head]
+        ruby: ['2.5', '2.6', '2.7', '3.0', '3.1', '3.2', head]
     runs-on: ${{ matrix.os }}-latest
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') || matrix.ruby == 'debug' }}
     steps:
@@ -30,9 +31,38 @@ jobs:
     - run: bundle exec rake build_local
     - run: bundle exec rake spec
 
+
+  test-container:
+    name: Ruby with ${{ matrix.env.CC }} compiler on ${{ matrix.os }}
+    container:
+      image: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ 'alpine:3.18', 'alpine:3.16' ]
+        env:
+          - {CC: gcc, CXX: g++}
+          - {CC: clang, CXX: clang++}
+    runs-on: ubuntu-latest
+    env: ${{ matrix.env }}
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Install Ruby
+      run: |
+        apk --no-cache --upgrade add build-base cmake git bash   \
+        autoconf make binutils-dev pkgconfig tar ruby-dev clang
+
+    - run: gem install bundler
+    - run: bundle install
+    - run: bundle exec rake build_local
+    - run: bundle exec rake spec
+
   release:
     name: Release gem
-    needs: test
+    needs: [test, test-container]
     runs-on: ubuntu-latest
     if: contains(github.ref, 'refs/tags/v')
     steps:
