Updated README with 1.6.2 information

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -3,7 +3,7 @@ name: test-and-release
 on:
   push:
     branches: [ master ]
-    tags: [ 'v*' ]
+#    tags: [ 'v*' ]
   pull_request:
   workflow_dispatch:
 
